# Cheetah-Vision-Realsense

./: .gitignore  hw10_soln.ipynb  hw11_soln-test.ipynb  hw6_soln.ipynb  hw7_soln.ipynb  hw9_soln.ipynb  readme.md
CMake/: libusb_config.cmake  lrs_options.cmake
CS690K_2023_Fall/: casadi_examples.ipynb
examples/: CMakeLists.txt
examples/cheetah-vision/: .cheetah_vision.cpp.swp  CMakeLists.txt  SE3.hpp  cheetah_localization.cpp  cheetah_pointcloud.cpp  cheetah_pointcloud.h  cheetah_vision.cpp  cheetah_vision.h  dummy.txt
examples/multicam/: rs-multicam.cpp
examples/pointcloud/: .rs-pointcloud.cpp.swp  CMakeLists.txt  glvisualization.txt  rs-pointcloud.cpp  rs-pointcloud.h
examples/pose/: rs-pose.cpp
wrappers/nodejs/: package-lock.json  package.json
wrappers/nodejs/tools/: package-lock.json
